# resume-projects

./: .gitignore  README.md  projects.code-workspace  pyproject.toml
Detection of knee osteoroporosis with xAI/: EDA (Simple).ipynb  app.py  model.py  test.py  tests.ipynb  train.py
Detection of knee osteoroporosis with xAI/configs/: config.py  constants.py  eda.yml
Detection of knee osteoroporosis with xAI/configs/ConvNeXt/: base_config.yaml
Detection of knee osteoroporosis with xAI/configs/DenseNet/: base_config.yaml  best_config_gpu.yaml  kaggle_base_config.yaml
Detection of knee osteoroporosis with xAI/configs/EfficientNet/: base_config.yaml  best_config_gpu.yaml
Detection of knee osteoroporosis with xAI/configs/EfficientNetV2/: base_config.yaml  best_config_gpu.yaml
Detection of knee osteoroporosis with xAI/dataset/: dataset.py
Detection of knee osteoroporosis with xAI/utils/: utils.py  visualize.py
Wine Quality Prediction/: wine-quality-eda.ipynb
