[project]
name = "Resume-Projects"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jakub Zenon Kujawa", email = "ZK_Jakub@proton.me"},
]
dependencies = [
    "seaborn>=0.13.2",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "scikit-learn>=1.5.1",
    "jupyter>=1.0.0",
    "plotly>=5.23.0",
    "imbalanced-learn>=0.12.3",
    "black>=24.8.0",
    "isort>=5.13.2",
    "xgboost>=2.1.1",
    "catboost>=1.2.5",
    "statsmodels>=0.14.2",
    "keras>=3.5.0",
    "gradio>=4.42.0",
    "scikit-image>=0.24.0",
    "lime>=0.2.0.1",
    "opencv-python>=4.10.0.84",
    "PyYAML>=6.0.2",
    "codecarbon>=2.6.0",
    "neptune>=1.11.1",
    "pytorch-lightning>=2.4.0",
    "dataclass-wizard>=0.22.3",
    "python-dotenv>=1.0.1",
    "rich>=13.8.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.4.1",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
